code/errors.txt
g++ -g -Wall -fpermissive -std=c++17 -c -o main.o code/main.cpp
g++ -g -Wall -fpermissive -std=c++17 -c -o sprite.o code/sprite.cpp
code/sprite.cpp: In constructor ‘sf::Sprite::Sprite()’:
code/sprite.cpp:10:20: error: class ‘sf::Sprite’ does not have any field named ‘s_Window’
   10 | Sprite::Sprite() : s_Window(VideoMode(1920, 1080), "Flower Fields", Style::Default)
      |                    ^~~~~~~~
code/sprite.cpp:12:1: error: expected ‘{’ before ‘int’
   12 | int main()
      | ^~~
code/sprite.cpp: In function ‘int main()’:
code/sprite.cpp:33:5: error: ‘window’ was not declared in this scope
   33 |     window.setView(view);
      |     ^~~~~~
make: *** [makefile:15: sprite.o] Error 1